--- a/config/ESW2.conf
+++ b/config/ESW2.conf
@@ -1,29 +1,22 @@
 hostname ESW2
 
 vlan 10
+exit
 
 vlan 20
+exit
 
 
-interface f1/0.10
+interface fa1/0
 
 
-switchport trunk encapsulation dot1q
 switchport mode trunk
+switchport trunk allowed vlan all
 
 no shut
 exit
 
-interface f1/0.20
-
-
-switchport trunk encapsulation dot1q
-switchport mode trunk
-
-no shut
-exit
-
-interface f1/2
+interface fa1/2
 
 switchport mode access
 switchport access vlan 20
@@ -32,7 +25,7 @@ switchport access vlan 20
 no shut
 exit
 
-interface f1/1
+interface fa1/1
 
 switchport mode access
 switchport access vlan 10
