--- a/config/ESW2.conf
+++ b/config/ESW2.conf
@@ -6,9 +6,11 @@ exit
 vlan 20
 exit
 
+vlan 99
+exit
+
 
 interface fa1/0
-
 
 switchport trunk encapsulation dot1q
 switchport mode trunk
@@ -20,8 +22,7 @@ exit
 interface fa1/1
 
 switchport mode access
-switchport access vlan 10
-
+switchport access vlan 10    
 
 no shut
 exit
@@ -29,8 +30,14 @@ exit
 interface fa1/2
 
 switchport mode access
-switchport access vlan 20
+switchport access vlan 20    
 
+no shut
+exit
+
+interface Vlan99
+
+ip address 172.16.100.189 255.255.255.192
 
 no shut
 exit
