--- a/config/ESW4_from_yaml.conf
+++ b/config/ESW4_from_yaml.conf
@@ -3,15 +3,21 @@ hostname ESW4
 vlan 10
 exit
 
-vlan 20 
+vlan 20
 exit
 
 vlan 99
 exit
 
 
-interface fa1/0
+interface Vlan99
 
+ip address 172.16.100.253 255.255.255.192
+
+no shut
+exit
+
+interface fa1/0
 
 switchport trunk encapsulation dot1q
 switchport mode trunk
@@ -23,8 +29,7 @@ exit
 interface fa1/1
 
 switchport mode access
-switchport access vlan 10
-
+switchport access vlan 10    
 
 no shut
 exit
@@ -32,8 +37,7 @@ exit
 interface fa1/2
 
 switchport mode access
-switchport access vlan 20
-
+switchport access vlan 20    
 
 no shut
 exit
